--- a/clicker/clicker.css
+++ b/clicker/clicker.css
@@ -1,16 +1,39 @@
 body{
-    background-color: black;
-}
-
-.button{
-    background-color: black;
-    color: yellowgreen;
-    border: 2px solid yellowgreen;
-    border-radius: 15%;
-}
-
-#number{
-    color: yellowgreen;
+    background: #97be97;
     text-align: center;
-    font-size: 100px;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+.btn{
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    background: aquamarine;
+    width: 160px;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: black;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+}
+.btn:hover, .btn:focus, .btn:active{
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale;
+    transform: scale(1.1);
+}
+h1{
+    color: black;
+}
+p{
+    color: black;
+    font-size: 1.2em;
 }
